--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:value="2.1" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan">
@@ -36,7 +36,7 @@
         </activity>
 
         <activity
-            android:name=".ListActivity"
+            android:name=".activities.ListActivity"
             android:exported="true"
             android:theme="@style/AppThemeTranslucent"
             android:windowSoftInputMode="adjustPan">
@@ -51,16 +51,16 @@
         </activity>
 
         <activity
-            android:name=".InfoActivity"
+            android:name=".activities.InfoActivity"
             android:theme="@style/AppThemeTranslucent"
             android:windowSoftInputMode="adjustPan" />
 
         <activity
-            android:name=".WebActivity"
+            android:name=".activities.WebActivity"
             android:windowSoftInputMode="adjustPan" />
 
         <provider
-            android:name=".SearchHistoryProvider"
+            android:name=".provider.SearchHistoryProvider"
             android:authorities="${applicationId}.SuggestionProvider"
             android:exported="false" />
 
